force-app/main/default/objects/Candidate__c/fields/Candidate_Score__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Score__c</fullName>
    <formula>Experience__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>