force-app/main/default/objects/Candidate__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>