force-app/main/default/objects/Candidate__c/fields/Is_Senior__c.field-meta.xml
<CustomField>
    <fullName>Is_Senior__c</fullName>
    <formula>Experience__c &gt;= 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Senior Profile</label>
    <type>Checkbox</type>
</CustomField>