force-app/main/default/objects/Candidate__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Notice Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>