force-app/main/default/objects/Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Candidate Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Job Portal</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Campus Drive</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Job Board</fullName>
                <isActive>false</isActive>
                <label>Job Board</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>