force-app/main/default/objects/Candidate__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Agency Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn InMail</fullName>
            </value>
            <value>
                <fullName>LinkedIn Apply</fullName>
            </value>
            <value>
                <fullName>LinkedIn Ad</fullName>
            </value>
            <value>
                <fullName>Career Page</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>Naukri</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>Shine</fullName>
            </value>
            <value>
                <fullName>Job Fair</fullName>
            </value>
            <value>
                <fullName>Office Walk-In</fullName>
            </value>
            <value>
                <fullName>College Campus</fullName>
            </value>
            <value>
                <fullName>Internship Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>